--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: "CSE113, Spring 2021"
+title: "CSE113, Winter 2022"
 description: "Parallel and Concurrent Programming"
 
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "air" # "air", "aqua", "contrast", "default", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "sunrise" # "air", "aqua", "contrast", "default", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 paginate: 5 # number of posts to show
 paginate_path: /page:num/
 
-repository: "SorensenUCSC/CSE113-2021"
+repository: "SorensenUCSC/CSE113-wi2022"
 
-baseurl: "/CSE113-2021"
+baseurl: "/CSE113-wi2022"
 
 plugins:
   - jekyll-feed
